fix: fix wrap bug

--- a/style.css
+++ b/style.css
@@ -3,11 +3,23 @@ body {
   }
   #main {
     margin: auto;
-    text-align: justify;
     max-width: 1024px;
+  }
+  #img-div {
+  margin: 0;
+  padding: 0;
+  }
+  #img-caption{
+  text-align: left;
   }
   hr {
     width: 100%;
+  }
+  ol {
+    margin: 10px;
+    padding: 0;
+    list-style: none;
+    text-align: justify;
   }
   img {
     border: 1px solid black;
@@ -17,19 +29,21 @@ body {
     max-width: 20vw;
     min-width: 110px;
   }
+  .photoNameInfo{
+    display: inline-flex;
+    margin: 10px;
+  }
   .myPhoto {
     font-size: small;
     text-align: center;
-    float: left;
+    margin: 20px 30px 0 0;
   }
   .list {
     max-width: 700px;
   }
   @media screen and (max-width: 500px) {
-    .myPhoto {
-      font-size: small;
-      text-align: left;
-      float: none;
+    .photoNameInfo{
+      flex-wrap: wrap;
     }
     body {
       background-color: rgb(38, 42, 61);
@@ -42,5 +56,6 @@ body {
       height: auto;
       max-width: 20vw;
       min-width: 110px;
+      margin-right: 30px;
     }
   }
